syntax = "proto3";
import "browser/node.proto";
import "browser/header.proto";
import "browser/window/history.proto";

import "elixirpb.proto";

option (elixirpb.file).module_prefix = "Crane.Protos.Browser";
option swift_prefix = "Crane";

message Response {
  string body = 1;

  map<string, Node> view_trees = 2;
  repeated string stylesheets = 3;
  repeated Header headers = 4;
  int32 status = 5;
  History history = 6;
}
